# Rustic-AI

./: .gitignore  AGENTS.md  CONTINUATION_SUMMARY.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  TODO.md  config.example.json
docs/: DECISIONS.md  DESIGN_GUIDE.md  agent-to-agent-protocol.md  comprehensive-state-analysis.md  config-fragments.md  config.cli-output.schema.json  config.schema.json  implementation-gaps.md  implementation-plan-four-optional-features.md  workflow-compatibility-presets.md  workflow-enhancement-plan.md  workflow-preset-migration.md  workflow-webhook-parity.md  workflow.definition.schema.json
docs/examples/: config-cli-output.json
docs/initial-planning/: DOMAIN_TOOLING_IMPLEMENTATION_PLAN.md  REQUIREMENTS.md  big-picture.md  initial-plan.md  initial-prompt.md  integration-plan.md  tools.md
docs/workflow-examples/: claude-code.nested-review-rework.workflow.json  claude-code.review-routing.workflow.json  claude-code.rework-subflow.workflow.json  n8n.lenient-fanout.workflow.json  n8n.webhook-idempotent-upsert.workflow.json  n8n.webhook-retry-pipeline.workflow.json  n8n.webhook-signature-gate.workflow.json  opencode.multi-agent-orchestration.workflow.json  opencode.parallel-checks.workflow.json
frontend/rustic-ai-cli/: Cargo.toml
frontend/rustic-ai-cli/src/: bridge.rs  cli.rs  main.rs  renderer.rs  repl.rs
rustic-ai-core/: Cargo.toml
rustic-ai-core/src/: error.rs  lib.rs  logging.rs
rustic-ai-core/src/agents/: behavior.rs  context.rs  coordinator.rs  memory.rs  mod.rs  registry.rs  state.rs  todo_extractor.rs
rustic-ai-core/src/auth/: mod.rs
rustic-ai-core/src/catalog/: taxonomy.rs
rustic-ai-core/src/commands/: types.rs
rustic-ai-core/src/config/: loader.rs  manager.rs  mod.rs  path.rs  schema.rs  validation.rs
rustic-ai-core/src/conversation/: context_window.rs  mod.rs  session_manager.rs
rustic-ai-core/src/events/: mod.rs  types.rs
rustic-ai-core/src/indexing/: ast.rs  graph.rs  mod.rs  parser.rs  symbols.rs  types.rs
rustic-ai-core/src/learning/: feedback.rs  mod.rs  patterns.rs  preferences.rs  storage.rs  success_patterns.rs  types.rs
rustic-ai-core/src/permissions/: configurable_policy.rs  mod.rs  policy.rs
rustic-ai-core/src/project/: profile.rs
rustic-ai-core/src/providers/: anthropic.rs  auth_capabilities.rs  factory.rs  google.rs  grok.rs  http_client.rs  mod.rs  ollama.rs  openai.rs  registry.rs  retry.rs  streaming.rs  types.rs  z_ai.rs
rustic-ai-core/src/rag/: mod.rs
rustic-ai-core/src/routing/: mod.rs  router.rs
rustic-ai-core/src/rules/: discovery.rs  frontmatter.rs  gitignore.rs  manual_invocation.rs  mod.rs  precedence.rs  scope.rs  topic_inference.rs  topic_tracker.rs
rustic-ai-core/src/runtime/: cancellation.rs  mod.rs
rustic-ai-core/src/skills/: loader.rs  mod.rs  registry.rs  types.rs
rustic-ai-core/src/storage/: factory.rs  mod.rs  model.rs  paths.rs
rustic-ai-core/src/storage/postgres/: backend.rs  mod.rs
rustic-ai-core/src/storage/sqlite/: backend.rs  mod.rs
rustic-ai-core/src/tools/: bracket_validator.rs  code_search.rs  convert.rs  crawler.rs  database.rs  docker.rs  download.rs  encoding.rs  filesystem.rs  format.rs  git.rs  grep.rs  http.rs  image.rs  lsp.rs  manager.rs  mcp.rs  mod.rs  process.rs  regex.rs  registry.rs  shell.rs  skill.rs  ssh.rs  sub_agent.rs  types.rs  watch.rs  web_fetch.rs  web_search.rs
rustic-ai-core/src/tools/plugin/: loader.rs  manifest.rs  mod.rs
rustic-ai-core/src/vector/: mod.rs
rustic-ai-core/src/workflows/: config_bridge.rs  executor.rs  expressions.rs  loader.rs  mod.rs  parser.rs  registry.rs  trigger.rs  types.rs
