[package]
name = "rustic-ai-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
provider-openai = []
provider-anthropic = []
provider-google = []
provider-grok = []
provider-ollama = []
tool-ssh = ["dep:russh"]
tool-plugin = ["dep:libloading"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
git2.workspace = true
globset.workspace = true
ignore.workspace = true
libloading = { workspace = true, optional = true }
reqwest.workspace = true
regex.workspace = true
jsonschema.workspace = true
quick-xml.workspace = true
percent-encoding.workspace = true
html-escape.workspace = true
csv.workspace = true
pulldown-cmark.workspace = true
html2md.workspace = true
lsp-types.workspace = true
image.workspace = true
russh = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
cron.workspace = true
