[package]
name = "rustic-ai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
jsonschema.workspace = true
rustic-ai-core = { path = "../../rustic-ai-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
rpassword = "7"
